# mdhelper

./: .gitignore  Cargo.toml  README.md
src/: cfg.rs  cli.rs
src/cmd/: gen.rs  mod.rs  record.rs
