[package]
name = "mdhelper"
version = "0.2.1"
authors = ["david<wendajiang93@163.com>"]
edition = "2021"
description = "Personal mdtool helper"

[[bin]]
name = "mdhelper"
path = "src/cli.rs"


[dependencies]
anyhow = "1.0.58"
chrono = "0.4"
clap = { version = "3.2.8", features = ["default", "derive", "cargo"] }
dirs = "4.0.0"
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.9"
